--- a/index.html
+++ b/index.html
@@ -3,71 +3,80 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hasini Reddy | Portfolio</title>
+  <title>Hasini | Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <!-- Header Section -->
+  <!-- ===== HEADER ===== -->
   <header>
-    <h1>Hasini Reddy</h1>
-    <p>Web Developer | Designer | AI Enthusiast</p>
+    <nav>
+      <h2 class="logo">Hasini</h2>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- Navigation -->
-  <nav>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+  <!-- ===== HERO SECTION ===== -->
+  <section class="hero">
+    <div class="hero-text">
+      <h1>I'm <span>Hasini</span> from AI & DS</h1>
+      <p>Welcome to my portfolio! I’m passionate about Artificial Intelligence, Data Science, and creative coding.</p>
+      <a href="#projects" class="btn">View My Work</a>
+    </div>
+  </section>
 
-  <!-- About Section -->
-  <section id="about">
+  <!-- ===== ABOUT SECTION ===== -->
+  <section id="about" class="section">
     <h2>About Me</h2>
     <p>
-      Hello! I'm <strong>Hasini</strong>, a passionate web developer and computer science student.
-      I enjoy creating responsive, modern websites and working on exciting projects that solve real-world problems.
+      Hi! I'm Hasini, an enthusiastic learner from AI & DS. I love exploring AI-driven technologies,
+      building smart solutions, and continuously improving my skills in software development and data analysis.
     </p>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects">
-    <h2>Projects & Skills</h2>
-    <div class="projects">
-      <div class="card">
-        <h3>Smart Traffic Light Controller</h3>
-        <p>AI-powered JavaFX project that adapts traffic lights based on live traffic conditions.</p>
+  <!-- ===== SKILLS SECTION ===== -->
+  <section id="skills" class="section">
+    <h2>Skills</h2>
+    <div class="skills-container">
+      <div class="skill">HTML</div>
+      <div class="skill">CSS</div>
+      <div class="skill">JavaScript</div>
+      <div class="skill">Python</div>
+      <div class="skill">Machine Learning</div>
+    </div>
+  </section>
+
+  <!-- ===== PROJECTS SECTION ===== -->
+  <section id="projects" class="section">
+    <h2>Projects</h2>
+    <div class="projects-container">
+      <div class="project-card">
+        <h3>Portfolio Website</h3>
+        <p>A personal website built using HTML, CSS, and JavaScript, showcasing my projects and skills.</p>
       </div>
-      <div class="card">
-        <h3>Fake News & Deepfake Detection</h3>
-        <p>AI system to detect misinformation and deepfakes using Python and NLP techniques.</p>
-      </div>
-      <div class="card">
-        <h3>Web Design Projects</h3>
-        <p>Created multiple responsive websites using HTML, CSS, JavaScript, and ReactJS.</p>
+      <div class="project-card">
+        <h3>AI Chatbot</h3>
+        <p>An interactive chatbot built using Python and NLP to answer queries intelligently.</p>
       </div>
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>If you'd like to connect, feel free to reach out:</p>
-    <ul>
-      <li><strong>Email:</strong> <a href="mailto:hasini@example.com">hasini@example.com</a></li>
-      <li><strong>LinkedIn:</strong> <a href="https://linkedin.com" target="_blank">linkedin.com/in/hasini</a></li>
-      <li><strong>GitHub:</strong> <a href="https://github.com" target="_blank">github.com/hasini</a></li>
-    </ul>
+  <!-- ===== CONTACT SECTION ===== -->
+  <section id="contact" class="section">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:hasini@example.com">hasini@example.com</a></p>
+    <p>GitHub: <a href="https://github.com/yannahasinireddy17" target="_blank">yannahasinireddy17</a></p>
   </section>
 
-  <!-- Footer -->
+  <!-- ===== FOOTER ===== -->
   <footer>
-    <p>© 2025 Hasini Reddy | All Rights Reserved</p>
+    <p>© 2025 Hasini | All Rights Reserved</p>
   </footer>
 
-  <!-- JavaScript File -->
   <script src="script.js"></script>
 </body>
 </html>
