updated about section with AI & DS info

--- a/index.html
+++ b/index.html
@@ -1,52 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hasini | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- ===== HEADER ===== -->
   <header>
+    <div class="container">
+      <h1 class="site-title">Hasini Reddy</h1>
+      <p class="subtitle">Web Developer | Designer | AI & DS Enthusiast</p>
+    </div>
     <nav>
-      <h2 class="logo">Hasini</h2>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- ===== HERO SECTION ===== -->
-  <section class="hero">
-    <div class="hero-text">
-      <h1>I'm <span>Hasini</span> from AI & DS</h1>
-      <p>Welcome to my portfolio! I’m passionate about Artificial Intelligence, Data Science, and creative coding.</p>
-      <a href="#projects" class="btn">View My Work</a>
-    </div>
-  </section>
-
   <!-- ===== ABOUT SECTION ===== -->
   <section id="about" class="section">
     <h2>About Me</h2>
-    <p>
-      Hi! I'm Hasini, an enthusiastic learner from AI & DS. I love exploring AI-driven technologies,
-      building smart solutions, and continuously improving my skills in software development and data analysis.
-    </p>
-  </section>
-
-  <!-- ===== SKILLS SECTION ===== -->
-  <section id="skills" class="section">
-    <h2>Skills</h2>
-    <div class="skills-container">
-      <div class="skill">HTML</div>
-      <div class="skill">CSS</div>
-      <div class="skill">JavaScript</div>
-      <div class="skill">Python</div>
-      <div class="skill">Machine Learning</div>
+    <div class="about-card">
+      <p>
+        Hello! I'm <strong>Hasini from AI & DS</strong>, a passionate web developer and
+        AI enthusiast. I enjoy creating responsive, modern websites and working on
+        exciting projects that combine creativity and data-driven intelligence to
+        solve real-world problems.
+      </p>
     </div>
   </section>
 
@@ -56,20 +41,24 @@
     <div class="projects-container">
       <div class="project-card">
         <h3>Portfolio Website</h3>
-        <p>A personal website built using HTML, CSS, and JavaScript, showcasing my projects and skills.</p>
+        <p>
+          A personal website showcasing my skills and projects, built using HTML, CSS, and JavaScript.
+        </p>
       </div>
       <div class="project-card">
         <h3>AI Chatbot</h3>
-        <p>An interactive chatbot built using Python and NLP to answer queries intelligently.</p>
+        <p>
+          An intelligent chatbot using Python and NLP that interacts with users in real-time.
+        </p>
       </div>
     </div>
   </section>
 
   <!-- ===== CONTACT SECTION ===== -->
   <section id="contact" class="section">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:hasini@example.com">hasini@example.com</a></p>
-    <p>GitHub: <a href="https://github.com/yannahasinireddy17" target="_blank">yannahasinireddy17</a></p>
+    <h2>Contact</h2>
+    <p>📧 Email: <a href="mailto:hasini@example.com">hasini@example.com</a></p>
+    <p>💻 GitHub: <a href="https://github.com/yannahasinireddy17" target="_blank">yannahasinireddy17</a></p>
   </section>
 
   <!-- ===== FOOTER ===== -->
