Updated email and added creative features

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <!-- ===== CONTACT SECTION ===== -->
   <section id="contact" class="section">
     <h2>Contact</h2>
-    <p>📧 Email: <a href="mailto:hasini@example.com">hasini@example.com</a></p>
+    <p>📧 Email: <a href="mailto:yannahasinireddy@gmail.com">yannahasinireddy@gmail.com</a></p>
     <p>💻 GitHub: <a href="https://github.com/yannahasinireddy17" target="_blank">yannahasinireddy17</a></p>
   </section>
 
