feat: update UI and add responsive nav

--- a/index.html
+++ b/index.html
@@ -1,71 +1,102 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hasini | Portfolio</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Hasini Reddy — Portfolio</title>
+
+  <!-- SEO & Social -->
+  <meta name="description" content="Hasini Reddy — Web Developer, Designer & AI/DS enthusiast. Portfolio with projects, skills and contact." />
+  <meta property="og:title" content="Hasini Reddy — Portfolio" />
+  <meta property="og:description" content="Web Developer, Designer & AI/DS enthusiast. View projects, skills and contact details." />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary" />
+
+  <!-- favicon (optional) -->
+  <link rel="icon" href="favicon.ico" />
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- ===== HEADER ===== -->
-  <header>
+  <!-- Header -->
+  <header class="site-header">
     <div class="container">
-      <h1 class="site-title">Hasini Reddy</h1>
-      <p class="subtitle">Web Developer | Designer | AI & DS Enthusiast</p>
+      <div class="brand">
+        <h1 class="site-title">Hasini Reddy</h1>
+        <p class="subtitle">Web Developer | Designer | AI &amp; DS Enthusiast</p>
+      </div>
+
+      <nav aria-label="Main Navigation">
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
   </header>
 
-  <!-- ===== ABOUT SECTION ===== -->
-  <section id="about" class="section">
-    <h2>About Me</h2>
-    <div class="about-card">
-      <p>
-        Hello! I'm <strong>Hasini from AI & DS</strong>, a passionate web developer and
-        AI enthusiast. I enjoy creating responsive, modern websites and working on
-        exciting projects that combine creativity and data-driven intelligence to
-        solve real-world problems.
-      </p>
-    </div>
-  </section>
-
-  <!-- ===== PROJECTS SECTION ===== -->
-  <section id="projects" class="section">
-    <h2>Projects</h2>
-    <div class="projects-container">
-      <div class="project-card">
-        <h3>Portfolio Website</h3>
+  <main>
+    <!-- About -->
+    <section id="about" class="section container">
+      <h2>About Me</h2>
+      <div class="about-card">
         <p>
-          A personal website showcasing my skills and projects, built using HTML, CSS, and JavaScript.
+          Hello! I'm <strong>Hasini</strong>, a passionate web developer and AI/DS enthusiast.
+          I build responsive websites and data-driven solutions that solve real problems.
         </p>
       </div>
-      <div class="project-card">
-        <h3>AI Chatbot</h3>
-        <p>
-          An intelligent chatbot using Python and NLP that interacts with users in real-time.
-        </p>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects" class="section container">
+      <h2>Projects</h2>
+      <div class="projects-grid" role="list">
+        <article class="project-card" role="listitem">
+          <h3>Portfolio Website</h3>
+          <p>A responsive portfolio built with HTML, CSS and JavaScript.</p>
+          <p><strong>Tech:</strong> HTML, CSS, JS</p>
+          <a class="project-link" href="#contact">View details / contact</a>
+        </article>
+
+        <article class="project-card" role="listitem">
+          <h3>AI Chatbot</h3>
+          <p>An NLP chatbot implemented with Python to support real-time interactions.</p>
+          <p><strong>Tech:</strong> Python, NLP</p>
+          <a class="project-link" href="https://github.com/yannahasinireddy17" target="_blank" rel="noopener">Repo</a>
+        </article>
       </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="section container">
+      <h2>Contact</h2>
+
+      <p>📧 Email: <a href="mailto:yannahasinireddy@gmail.com">yannahasinireddy@gmail.com</a></p>
+      <p>💻 GitHub: <a href="https://github.com/yannahasinireddy17" target="_blank" rel="noopener">yannahasinireddy17</a></p>
+
+      <!-- small contact form that falls back to mailto -->
+      <form id="contactForm" class="contact-form" action="mailto:yannahasinireddy@gmail.com" method="post" enctype="text/plain" aria-label="Contact form">
+        <label>
+          Your name
+          <input type="text" name="name" required />
+        </label>
+        <label>
+          Message
+          <textarea name="message" rows="4" required></textarea>
+        </label>
+        <button type="submit">Send (mailto fallback)</button>
+      </form>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>© 2025 Hasini | All Rights Reserved</p>
     </div>
-  </section>
-
-  <!-- ===== CONTACT SECTION ===== -->
-  <section id="contact" class="section">
-    <h2>Contact</h2>
-    <p>📧 Email: <a href="mailto:yannahasinireddy@gmail.com">yannahasinireddy@gmail.com</a></p>
-    <p>💻 GitHub: <a href="https://github.com/yannahasinireddy17" target="_blank">yannahasinireddy17</a></p>
-  </section>
-
-  <!-- ===== FOOTER ===== -->
-  <footer>
-    <p>© 2025 Hasini | All Rights Reserved</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
+
